--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,18 +1,20 @@
 [defaults]
-collections_path = collections
-inventory = inventory/
-become_method = sudo
+collections_path = ./collections
+roles_path = ./roles
 
 [galaxy]
-server_list = certified, validated, community_galaxy
+server_list = certified,validated,galaxy
 
 [galaxy_server.certified]
-url = https://cloud.redhat.com/api/automation-hub/content/published/
-auth_url = https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
+# Grab a token at https://console.redhat.com/ansible/automation-hub/token
+# Then define it in the ANSIBLE_GALAXY_SERVER_CERTIFIED_TOKEN environment variable
+url=https://console.redhat.com/api/automation-hub/content/published/
+auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
 
 [galaxy_server.validated]
-url = https://cloud.redhat.com/api/automation-hub/content/validated/
-auth_url = https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
+# Define the token in the ANSIBLE_GALAXY_SERVER_VALIDATED_TOKEN environment variable
+url=https://console.redhat.com/api/automation-hub/content/validated/
+auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
 
-[galaxy_server.community_galaxy]
-url = https://galaxy.ansible.com/
+[galaxy_server.galaxy]
+url=https://galaxy.ansible.com/
