--- a/playbooks_linux/register_instance.yml
+++ b/playbooks_linux/register_instance.yml
@@ -21,12 +21,12 @@
 
     # Install subscription-manager if it's not there
     - name: Install subscription-manager
-      ansible.builtin.yum:
+      ansible.builtin.dnf:
         name: subscription-manager
         state: present
 
     - name: Remove RHUI client packages
-      ansible.builtin.yum:
+      ansible.builtin.dnf:
         name: rh-amazon-rhui-client*
         state: removed
 
@@ -45,7 +45,7 @@
 
     - name: Install katello package
       when: sat_url is defined
-      ansible.builtin.yum:
+      ansible.builtin.dnf:
         name: "https://{{ sat_url }}/pub/katello-ca-consumer-latest.noarch.rpm"
         state: present
         validate_certs: false
